revamp : more articles section

--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -345,7 +345,7 @@ strong {
 	}
 }
 
-/* slick dots */
+/* slick dots & arrows*/
 .slick-dots{
 	display: flex;
 	justify-content: center;
@@ -373,9 +373,71 @@ strong {
 	}
 	@media(max-width:768px){
 		margin-top: 15px;
+		li{
+			button{
+				height: 6px;
+				width: 6px;
+			}
+			&:not(:last-child){
+				margin-right: 5px;
+			}
+		}
 	}
 }
-
+.slider-nav{
+	.arrows{
+		display: flex;
+		align-items: center;
+		.dots{
+			.slick-dots{
+				margin:0;
+				li{
+					display: flex;
+    				align-items: center;
+					&:not(:last-child){
+						margin-right: 8px;
+					}
+				}
+			}
+		}
+		&__prev, &__next{
+			background-color: transparent;
+			padding: 0;
+    		border-radius: 100%;
+			outline: none;
+			transition: opacity 250ms ease-in, margin 250ms ease-in;
+			opacity:1;
+		}
+		&__prev{
+			margin-right: 15px;
+			svg{
+				transform: rotate(180deg);
+			}
+			&.slick-disabled{
+				margin-left: -46.113px;
+			}
+		}
+		&__next{
+			margin-left: 15px;
+		}
+		.slick-disabled{
+			visibility: hidden;
+			opacity: 0;
+		}
+	}
+	@media(max-width:1024px) and (min-width:991px){
+		
+	}
+	@media(max-width:768px){
+		bottom: -14px !important;
+    	padding: 0 !important;
+    	width: 100%;
+		padding: 0;
+		.arrows{
+			justify-content: center;
+		}
+	}
+}
 /* gradient overlay */
 .gradient-overlay{
 	position: absolute;
@@ -385,4 +447,12 @@ strong {
 	bottom: 0;
 	left: 0;
 	opacity: 0.6;
+}
+
+.scaleup{
+	transition:transform 250ms ease-in-out;
+	transform: scale(1.1);
+}
+.hovered-link{
+	color: theme-color("dark-turquoise") !important;
 }
