--- a/wp-content/themes/healthkart/assets/scss/_footer.scss
+++ b/wp-content/themes/healthkart/assets/scss/_footer.scss
@@ -19,7 +19,7 @@
 	    		}
 			    .widget-title{
 				    margin-top: 0;
-				    margin-bottom: 5px;
+				    margin-bottom: 15px;
 				    color: #2c2c2c;
 				    font-size: 14px;
 				    font-weight: bold;
@@ -77,7 +77,7 @@
 							}
 						}
 						&:last-child{
-							width: 32%;
+							width: 30%;
 						}
 	    			}
 	    			@media (max-width: 991px){
@@ -90,15 +90,7 @@
 	    				&:first-child{
 	    					float: left;
 	    					width: 100%;
-	    					
-							@media(max-width:768px){
-								border-bottom: 1px solid #d3d4d5;
-							}
-							/* padding-bottom: 18px;
-							margin-bottom: 34px; */
-	    					.widget-title{
-	    						display: none;
-	    					}
+
 					    	.textwidget{
 								display: flex;
 								flex-wrap: wrap;
@@ -213,7 +205,37 @@
 							}
 					    }
 	    			}
+					@media(max-width: 768px){
+						.widget_text{
+							border: none;
+						}
+					}
 		    	}
+				section{
+					width: 14%;
+					&:not(:last-child){
+						padding-right: 20px;
+					}
+					&.widget_nav_menu{
+						nav{
+							ul{
+								li{
+									&:not(:last-child){
+										margin-bottom: 5px;
+									}
+									a{
+										font-size: 14px;
+										line-height: 27px;
+										color: #4e4e4e;
+										font-weight: 400;
+										letter-spacing: 0;
+										text-transform: none;
+									}
+								}
+							}
+						}
+					}
+				}
 		    }
 	    }
 	}
@@ -316,6 +338,7 @@
 	}
 	.disclaimer-section{
 		border-top: 1px solid hsla(0,0%,43.9%,.33);
+		border-bottom: 1px solid hsla(0,0%,43.9%,.33);
 		display: flex;
 		align-items: center;
 		padding-top: 29px;
@@ -388,6 +411,8 @@
 			}
 			.downloads{
 				flex-direction: column;
+				padding-top: 17px;
+				padding-bottom: 23px;
 				h4{
 					margin: auto;
 					margin-bottom: 23px;
@@ -441,7 +466,6 @@
     	padding-bottom: 27px;
     	font-size: 12px;
     	font-weight: 400;
-		margin-top: 23px;
 	}
 	.copyrights{
 		padding-top: 10px;
@@ -452,4 +476,26 @@
 		line-height: 18px;
 		color: #6a6a6a;
 	}
+	.socials{
+		padding-top: 17px;
+		padding-bottom: 6px;
+		border-top: 1px solid hsla(0,0%,43.9%,.33);
+		.mob-widget-heading{
+			margin-bottom: 26px !important;
+			text-transform: uppercase;
+			font-size: 14px !important;
+			font-weight: 600 !important;
+			line-height: 18px;
+			letter-spacing: .42px;
+			color: #2c2c2c !important;
+			text-align: center;
+		}
+		.socials-box{
+			display: flex;
+			grid-gap: 27px;
+			gap: 27px;
+			align-items: center;
+		}
+	}
 }
+
