--- a/wp-content/themes/healthkart/assets/scss/_header.scss
+++ b/wp-content/themes/healthkart/assets/scss/_header.scss
@@ -245,6 +245,7 @@
 						    width: 250px;
 						    box-shadow: 0px 0px 5px 0px #f3f3f3;
 						    z-index: 4;
+							padding: 10px 0;
 						    li{
 					    	    margin-right: 0px;
 							    width: auto;
