--- a/wp-content/themes/healthkart/assets/scss/_header.scss
+++ b/wp-content/themes/healthkart/assets/scss/_header.scss
@@ -63,8 +63,8 @@
 						.top-line,
 						.mid-line,
 						.bot-line{
-							background: #36b6b0;
-							color: #36b6b0;
+							background: theme-color("dark-blue");
+							color: theme-color("dark-blue");
 							width: 1.7rem;
 							height: 2.36px;
 							margin: 6px;
