--- a/wp-content/themes/healthkart/assets/scss/_vars.scss
+++ b/wp-content/themes/healthkart/assets/scss/_vars.scss
@@ -6,6 +6,7 @@ $theme-colors: (
   /* theme colors 2021 */
   "platinum": #D7E1F4,
   "dark-blue": #0B1B3D,
+  "mobile-text":#2D3748,
   "dark-turquoise": #05BFBF,
   "white": #FFFFFF,
   "light-gray-1": #F2F4F8,
